Fixex cards on index page there were not centered

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,7 +1,7 @@
 .container-grid {
-  margin: 0 -75px;
+  margin: 0 auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   margin-bottom: 30px;
   grid-gap: 30px;
 }
